buildscript {
	ext {
		springBootVersion = '1.4.2.RELEASE'
        swagger = '2.6.0'
        springDataNeo4J = '4.1.3.RELEASE'
        neo4j = '3.0.0'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'idea'

jar {
	baseName = 'trackUser'
	version = '0.0.1-SNAPSHOT'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	mavenCentral()
}


dependencies {
    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: swagger
    compile group: 'io.springfox', name: 'springfox-swagger2', version: swagger
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version:springBootVersion
    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version:springDataNeo4J
    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version:springDataNeo4J
    compile group: 'com.voodoodyne.jackson.jsog', name: 'jackson-jsog', version:'1.1'
    compile group: 'org.neo4j', name: 'neo4j-kernel', version:neo4j
    compile group: 'org.neo4j.app', name: 'neo4j-server', version:neo4j

    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:springBootVersion
    testCompile group: 'org.neo4j.test', name: 'neo4j-harness', version:neo4j
    testCompile group: 'org.neo4j', name: 'neo4j-ogm-test', version:'2.0.6'

}